sfSandBoxCode/force-app/main/default/objects/Leave_Accrual__c/Leave_Accrual__c.object-meta.xml
<CustomObject>
    <label>Leave Accrual</label>
    <nameField>
        <displayFormat>LAU-{00000000}</displayFormat>
        <label>Leave Accrual Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Accruals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>