sfSandBoxCode/force-app/main/default/objects/Leave_Accrual__c/fields/Days_Accrued__c.field-meta.xml
<CustomField>
    <fullName>Days_Accrued__c</fullName>
    <label>Days Accrued</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>