sfSandBoxCode/force-app/main/default/objects/Leave_Accrual__c/fields/Leave_Entitlement_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Leave_Entitlement_Utilization__c</fullName>
    <label>Leave Entitlement Utilization</label>
    <referenceTo>Leave_Entitlement_Utilization__c</referenceTo>
    <relationshipLabel>Leave Accruals</relationshipLabel>
    <relationshipName>Leave_Accruals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>