sfSandBoxCode/force-app/main/default/objects/Leave_Accrual__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Period__c</columns>
    <columns>Employee__c</columns>
    <columns>Days_Accrued__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>